Fix HTML spacing problem and add CSS

--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,10 @@ html {
   transition: all .2s linear;
 }
 
+.hover-box:focus {
+  z-index: 10;
+}
+
 .hover-box:hover .hover-box-caption {
   bottom: 0;
 }
